# Quantum_Bot

./: .gitignore  Cargo.toml  README.md  data.toml  json_test.txt  start.bat
src/: embedds.rs  main.rs  status.rs  tests.rs
