[package]
name = "run"
version = "0.1.0"
edition = "2021"
authors = ["PFLA"]
description = "A Discord Bot for the Quantum Server"

[dependencies]
serenity = "*"
tokio = {version="*",features=["full"]}
toml = "*"
serde = {version = "*",features = ["derive"]}
rand = "*"
reqwest = "*"
serde_with = {version = "*", features = ["chrono"]}
serde_json = "1.0.132"
